completed first milestone

--- a/index.html
+++ b/index.html
@@ -14,7 +14,17 @@
 <body>
 
 
-    <main></main>
+    <main>
+
+        <div class="container border m-5">
+            
+            <div class="row row-cols-sm-2 row-cols-md-3 align-items-center">
+
+            </div>
+
+        </div>
+
+    </main>
 
     <script src="js/utilities.js"></script>
     <script src="js/main.js"></script>
