completed code with bonus
completed code and all bonus, html adjustments

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 
     <main>
 
-        <div class="container border m-5">
-            
-            <div class="row row-cols-sm-2 row-cols-md-3 align-items-center">
+        <div class="container m-5 text-center">
+
+            <h1>Our Team</h1>
+
+            <div class="row row-cols-sm-2 row-cols-md-3 align-items-center g-3">
 
             </div>
 
